<resources>
    <string name="app_name">DataBindingSample</string>
    <string name="account_person_err">Person Name Invalid</string>
    <string name="account_profession_err">Profession Invalid</string>
    <string name="account_targetSaving_err">Target Saving Invalid</string>
    <string name="account_targetSaving_less9999_err">Target Saving should > 9999</string>

    <string name="title_activity_master">MasterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Basic Rendering</string>
    <string name="menu_gallery">Item List</string>
    <string name="menu_slideshow">Form Validation</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">View Pager</string>
</resources>
