<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_send"
        android:name="com.ratanapps.databindingsample.ui.fragment.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ratanapps.databindingsample.ui.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ratanapps.databindingsample.ui.fragment.ItemList.ItemListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/item_list_fragment" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ratanapps.databindingsample.ui.fragment.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ratanapps.databindingsample.ui.fragment.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ratanapps.databindingsample.ui.fragment.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>